# ai_devops_perception_sys

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-14-ai-devops-perception.md
docs/superpowers/specs/: 2026-07-14-ai-devops-perception-design.md
src/devops_perception/: __init__.py  api.py  engine.py  main.py  models.py  playback.py  scenarios.py  store.py
src/devops_perception.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/devops_perception/static/: app.js  control.js  index.html  styles.css
tests/: test_api.py  test_dashboard.py  test_dashboard_logic.js  test_engine.py  test_models.py  test_playback.py  test_replay.py  test_scenarios.py  test_store.py
