[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-perception"
version = "0.1.0"
description = "Deterministic AI DevOps perception and playback primitives"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic>=2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
