[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-perception"
version = "0.1.0"
description = "Deterministic AI DevOps perception and playback primitives"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = [
    "httpx2",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devops_perception = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
